implemented executor and initial working commit